apps/atmos-proxy/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 2
  selector:
    matchLabels:
      app: deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: nginx:stable
          volumeMounts:
            - name: config
              mountPath: /etc/nginx
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: config
          hostPath:
            path: /opt/k8s-volumes/atmos-proxy-config
            type: Directory
