apps/atmos-proxy/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  selector:
    app: default
  ports:
    - name: "80"
      port: 80
      targetPort: 80
